# opentps2

./: .gitattributes  .gitignore  .gitlab-ci.yml  CCC.md  CCC_concepts.md  ChangeLogsToOpenTPSCore.md  ChangeLogsToOpenTPSGUI.md  Dockerfile  LICENSE  OpenTPS_GUI_guide.md  PhotonPlan.md  README.md  install_opentps_anaconda_windows.bat  install_opentps_linux.sh  install_opentps_venv_windoows.bat  install_opentps_windows.bat  main.py  mainConfig.py  opentps.py  programSettings.py  pyproject.toml  remove_large_files_from_history.bat  setup.py  start_opentps_anaconda_windows.bat  start_opentps_linux.sh  start_opentps_venv_windows.bat  start_opentps_windows.bat
CI/: check_version.py  tests.py  tests_gui.py
CodeExamples_GUI/: optiFLASH.py  optiGUI.py
CodeExamples_NoGUI/: 3DSeqDRR.py  PBSDeliveryTimings.py  beamletFreeOpti.py  create3DSeqAnd3DModel.py  create3DSeqFromDicom.py  createDynamic3DModelFromDicom.py  createDynamic3DModelFromDicomFields.py  createDynamicModelFromDynamicSeq.py  createModelWithROIsFromDicomImages.py  crop3DDataAroundROI.py  deformableDataAugmentation.py  dynSeqDRR.py  evaluateRobustness.py  exampleApplyBaselineShift.py  exampleApplyBaselineShiftToModel.py  exampleDRRwithTigre.py  exampleDeformationFromWeightMaps.py  exampleImageResampling.py  exampleInterFractionChanges.py  exampleMHD.py  exampleMidP.py  exampleMorphons.py  examplePlanDeliveryContinousSeq.py  examplePlanDeliverySimulation.py  exampleSegmentation.py  generateDRRAndGTVMasks.py  generateRandomSamplesFromModel.py  interFractionChanges.py  inversedLungs.py  opti_no_GUI.py  planDesign.py  readCTImage.py  readCTImageFromDicom.py  robust_opti_no_GUI.py  rtPlanAndDoseCalculation.py  testDictionarizeData.py  testGitThing.py
Core/: __init__.py  api.py  event.py
Extensions/: .gitignore
GUI/: MainWindow.py  programSettingEditor.py  tools.py  viewController.py
Script/: API_log.py  startScript.py  startScriptExample.py
_deprecated_CodeExamples_NoGUI/: PBSDeliveryTimings.py  beamletFreeOpti.py  create3DSeqFromDicom.py  create3DSeqFromImages.py  createDynamic3DModelFromDicomFields.py  deformableDataAugmentation.py  dynSeqDRR.py  exampleApplyBaselineShiftToModel.py  (+9 more)
(+1195 files in other folders)
